# ID2206

./: .gitignore  README.md  dictionary.md  dictionary.txt  test.c
Experiments/Processes/: fork.c  stack.c  test1.c  zombie.c
Experiments/Virtual Memory/: bench  bench.c  mylloc.c
RustOS/: Cargo.toml  Makefile  linker.ld
RustOS/src/: lib.rs  vga_buffer.rs
RustOS/src/arch/x86_64/: boot.asm  linker.ld  long_mode_init.asm
RustOS/src/memory/: area_frame_allocator.rs
lab1/: digenv.c
lab2/: mini_shell.c
old/: mini_shell.c
