[package]
name = "blog_os"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
multiboot2 = "0.1.0"
rlibc = "0.1.4"
spin = "0.3.4"
bitflags = "0.7.0"
volatile = "0.1.0"

[dependencies.x86]
version = "0.6.0"
default-features = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
